--- a/administrador/templates/mostrar_paciente_administrador.html
+++ b/administrador/templates/mostrar_paciente_administrador.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'styles/mostrar_paciente.css' %}">
 
 <div class="container-paciente">
-    <div class="back-arrow" onclick="window.location.href='{% url 'admin_pacientes' %}';">
+    <div class="back-arrow" onclick="window.location.href='{% url 'listar_pacientes_activos' %}';">
         &#8592; Regresar
     </div>
 
