--- a/administrador/templates/mostrar_paciente_administrador.html
+++ b/administrador/templates/mostrar_paciente_administrador.html
@@ -3,10 +3,16 @@
 {% block content %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'styles/mostrar_paciente.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <div class="container-paciente">
-    <div class="back-arrow" onclick="window.location.href='{% url 'admin_pacientes' %}';">
-        &#8592; Regresar
+    <div class="header-container">
+        <div class="back-arrow" onclick="window.location.href='{% url 'admin_pacientes' %}';">
+            &#8592; Regresar
+        </div>
+        <div class="edit-icon" onclick="window.location.href='{% url 'editar_datos_paciente_admin' paciente.id %}'">
+            <i class="fas fa-pencil-alt"></i>
+        </div>
     </div>
 
     <h1>Información Paciente</h1>
@@ -59,7 +65,6 @@
             {% else %}
                 <button class="btn" disabled title="No se puede asignar cita sin terapeuta">Asignar Cita</button>
             {% endif %}
-            <button class="btn" onclick="window.location.href='{% url 'editar_datos_paciente_admin' paciente.id %}'">Editar Datos</button>
         </div>
     </div>
 </div>
