--- a/recepcionista/templates/agregar_paciente.html
+++ b/recepcionista/templates/agregar_paciente.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block header %}
-<a href="{% url 'admin_pacientes' %}">
+<a href="{% url 'recepcionista_pacientes_activos' %}">
     <img src="{% static 'icons/Volver-atras.svg' %}" alt="">
 </a>
 <h1>Agregar paciente</h1>
