Ahora se actualizan los datos en la base de datos y agregue un campo para fecha de nacimiento temporal para que se reciban los datos del paciente

--- a/administrador/templates/editar_datos_paciente_admin.html
+++ b/administrador/templates/editar_datos_paciente_admin.html
@@ -115,9 +115,9 @@
             <!-- Campo Fecha de Nacimiento -->
             <div class="form-group">
                 <label for="{{ paciente_form.fecha_nacimiento.id_for_label }}">{{ paciente_form.fecha_nacimiento.label }}</label>
-                {{ paciente_form.fecha_nacimiento }}
+                <input type="date" id="{{ paciente_form.fecha_nacimiento.id_for_label }}" name="fecha_nacimiento" value="{{ paciente_form.fecha_nacimiento.value|date:'Y-m-d' }}">
                 <div class="error">{{ paciente_form.fecha_nacimiento.errors }}</div>
-            </div>
+            </div>         
             <!-- Campo Email -->
             <div class="form-group">
                 <label for="{{ paciente_form.email.id_for_label }}">{{ paciente_form.email.label }}</label>
