Ahora el campo de fecha de nacimiento tiene el mismo diseño que el resto. tambien agregue un campo de terapeuta en el que se puede cambiar el terapeuta asignado

--- a/administrador/templates/agregar_paciente_admin.html
+++ b/administrador/templates/agregar_paciente_admin.html
@@ -81,9 +81,9 @@
 
             <!-- Campo Estatura -->
             <div class="form-group">
-                <label for="{{ paciente_form.estatura.id_for_label }}">{{ paciente_form.estatura.label }}</label>
-                {{ paciente_form.estatura }}
-                <div class="error">{{ paciente_form.estatura.errors }}</div>
+                <label for="{{ paciente_form.altura.id_for_label }}">{{ paciente_form.altura.label }}</label>
+                {{ paciente_form.altura }}
+                <div class="error">{{ paciente_form.altura.errors }}</div>
             </div>
 
             <!-- Historial Médico -->
@@ -102,9 +102,9 @@
 
             <!-- Alergias -->
             <div class="form-group">
-                <label for="{{ paciente_form.alergia.id_for_label }}">{{ paciente_form.alergia.label }}</label>
-                {{ paciente_form.alergia }}
-                <div class="error">{{ paciente_form.alergia.errors }}</div>
+                <label for="{{ paciente_form.alergias.id_for_label }}">{{ paciente_form.alergias.label }}</label>
+                {{ paciente_form.alergias }}
+                <div class="error">{{ paciente_form.alergias.errors }}</div>
             </div>
 
         </div>
