--- a/administrador/templates/editar_datos_paciente_admin.html
+++ b/administrador/templates/editar_datos_paciente_admin.html
@@ -6,7 +6,6 @@
 
 {% block extra_head%}
 <link rel="stylesheet" href="{% static 'css/editar_datos_paciente_admin.css' %}">
-<link rel="stylesheet" href="{% static 'styles/formularios.css' %}">
 <link rel="stylesheet" href="{% static 'styles/modal.css' %}">
 {% endblock %}
 
@@ -169,7 +168,14 @@
                 <label for="{{ paciente_form.calle.id_for_label }}">{{ paciente_form.calle.label }}</label>
                 {{ paciente_form.calle }}
                 <div class="error">{{ paciente_form.calle.errors }}</div>
-            </div>    
+            </div>
+            <div class="form-group">
+                <label for="terapeuta">Terapeuta Asignado (*)</label>
+                <div class="input-container">
+                    <input type="text" id="terapeuta" name="terapeuta" class="campo-formulario" required readonly value="{{ paciente.terapeuta|default:'Sin terapeuta' }}">
+                    <button type="button" class="boton-azul" onclick="window.location.href='{% url 'elegir_terapeuta_administrador' paciente.id %}'">Reasignar</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="contenedor-botones">
