--- a/administrador/static/styles/mostrar_paciente.css
+++ b/administrador/static/styles/mostrar_paciente.css
@@ -5,6 +5,10 @@
     align-items: flex-start; 
 }
 
+.main-content{
+    margin: 20px;
+}
+
 h1{
     font-weight: normal;
     font-size: 3rem;
@@ -20,10 +24,10 @@ h2{
 }
 
 .container-paciente {
-    width: 80%; /* Cambia a un tamaño más pequeño, por ejemplo, 80% */
-    min-width: 1000px; /* Opcional: establece un ancho máximo */
+    width: 100%; /* Cambia a un tamaño más pequeño, por ejemplo, 80% */
+    /*max-width: 1150px; /* Opcional: establece un ancho máximo */
     padding: 0.8rem;
-    margin: 0.3125rem auto; /* Margen automático en los lados para centrar */
+    /*margin: 0.3125rem auto; /* Margen automático en los lados para centrar */
     box-sizing: border-box;
     background-color: #001058;
     border-radius: 0.4rem; /* Descomenta si quieres bordes redondeados */
@@ -32,6 +36,7 @@ h2{
 
 .card-paciente {
     display: flex;
+    flex-flow: row nowrap;
     justify-content: center; /* Centra el contenido si es necesario */
     color: white;
     display: flex;
@@ -41,6 +46,9 @@ h2{
 .columna {
     width: 50%; /* Cada columna toma la mitad del ancho */
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 .columna p {
@@ -57,6 +65,15 @@ p strong{
 
 p span{
     font-weight: normal;
+    display: flex;
+    align-items: center;
+    margin-left: 8px;
+}
+
+span img{
+    width: 15px;
+    height: 15px;
+    padding-top: 3px;
 }
 
 strong {
@@ -91,4 +108,18 @@ strong {
     margin-right: 10px; /* Espacio entre el texto y el botón */
     display: flex; /* Activa flexbox para el párrafo */
     align-items: center; /* Alinea verticalmente los elementos al centro */
+}
+
+@media screen and (max-width:1200px){
+    .columna p{
+        font-size: 20px;
+    }
+}
+
+
+@media screen and (max-width:768px){
+    .card-paciente{
+        flex-direction: column;
+        justify-content: center;
+    }
 }
