--- a/administrador/templates/mostrar_paciente_administrador.html
+++ b/administrador/templates/mostrar_paciente_administrador.html
@@ -22,7 +22,7 @@
             <p><strong>Medicamentos:</strong><br> <span>{{ paciente.medicamentos|default:"Sin medicamentos ingresados" }}</span></p>
             <p><strong>Estado:</strong><br> <span>
                 {% if paciente.is_active %}
-                    Activo <span class="estado-activo"></span>
+                    Activo <span class="estado-activo"> <img src="{% static "icons/activo.svg" %}"></span>
                 {% else %}
                     Inactivo
                 {% endif %}
@@ -30,19 +30,19 @@
             </p>
             <p><strong>Número de teléfono:</strong><br> <span>{{ paciente.telefono }}</span></p>
             <p><strong>Patología:</strong><br> <span>{{ paciente.patologia }}</span></p>
-            <p><strong>Dispositivo Órtesis:</strong> {{ paciente.dispositivo_ortesis|default:"Sin dispositivo de órtesis ingresado" }}</p>
-            <p><strong>Próxima Cita:</strong> 
+            <p><strong>Dispositivo Órtesis:</strong><br><span>{{ paciente.dispositivo_ortesis|default:"Sin dispositivo de órtesis ingresado" }}</span></p>
+            <p><strong>Próxima Cita:</strong><br><span> 
                 {% if cita %}
                     {{ cita.fecha }}
                 {% else %}
                     Sin cita asignada
                 {% endif %}
-            </p>
             {% if paciente.terapeuta_id %}
             <button class="btn" onclick="window.location.href='{% url 'calendar_asignar_paciente_administrador' paciente.id paciente.terapeuta_id %}'">Asignar Cita</button>
             {% else %}
                 <button class="btn" disabled title="No se puede asignar cita sin terapeuta">Asignar Cita</button>
             {% endif %} 
+            </span></p>
 
         </div>
         <div class="columna derecha">
@@ -52,15 +52,15 @@
             <p><strong>Historial médico:</strong><br> <span>{{ paciente.historial_medico|default:"Sin historial médico" }}</span></p>
             <p><strong>Alergias:</strong><br> <span>{{ paciente.alergias|default:"Sin alergias" }}</span></p>
             <p><strong>Correo Electrónico:</strong><br> <span>{{ paciente.email }}</span></p>
-            <!--<p><strong>Dirección:</strong><br> <span>{{ paciente.calle }}, {{ paciente.comuna }}, {{ paciente.provincia }}, {{ paciente.region }}</span></p>-->
+            <p><strong>Dirección:</strong><br> <span>{{ paciente.calle }}, {{ paciente.comuna }}, {{ paciente.provincia }}, {{ paciente.region }}</span></p>
             <p><strong>Progreso:</strong><br> <span>{{ paciente.progreso|default:"Sin progreso ingresado" }}</span></p>
-            <p><strong>Actividad física:</strong> {{ paciente.actividad_fisica|default:"Sin actividad física ingresada" }}</p>
+            <p><strong>Actividad física:</strong><br><span>{{ paciente.actividad_fisica|default:"Sin actividad física ingresada" }}</span></p>
             <p><strong>Terapeuta a Cargo:</strong><br>
-                <span class="terapeuta-info">{{ paciente.terapeuta.user.first_name }} {{ paciente.terapeuta.user.last_name|default:"Sin terapeuta asignado" }}</span>
-                <button class="btn" onclick="window.location.href='{% url 'elegir_terapeuta_administrador' paciente.id %}'">Asignar Terapeuta</button>
+                <span class="terapeuta-info">{{ paciente.terapeuta.user.first_name }} {{ paciente.terapeuta.user.last_name|default:"Sin terapeuta asignado" }}
+                <button class="btn" onclick="window.location.href='{% url 'elegir_terapeuta_administrador' paciente.id %}'">Asignar Terapeuta</button></span>
             </p>
             {% if not paciente.is_active %}
-                <p><strong>Motivo de desvinculación:</strong> {{ paciente.motivo_desvinculacion|default:"Sin motivo de desvinculación ingresado" }}</p>
+                <p><strong>Motivo de desvinculación:</strong><br><span> {{ paciente.motivo_desvinculacion|default:"Sin motivo de desvinculación ingresado" }}</span></p>
             {% endif %}
         </div>
     </div>
